Bug 55418: Add job runners for new Parsoid job types
Parsoid jobs are now split in two queues:

1) Re-parses of an edited page itself

2) Updates to pages transcluding a page (or template) or an image

The second has a lower priority and is more expensive, while the first is
important for avoiding cache misses in the Parsoid Varnishes.

Change-Id: I60d2d179c3d5805b8b5d6e45a4f14904bf1bebdb

--- a/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
+++ b/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
@@ -210,8 +210,16 @@ else
 	hpriotypes="$hpriotypes TranslateRenderJob TranslateMoveJob TranslateDeleteJob" # translate
 	hpriotypes="$hpriotypes uploadFromUrl" # upload
 	(runJobsLoopService "$hpriotypes" "y" <%= dprioprocs %>) &
+
 	# Start loops for highly I/O bound jobs that work on special services (e.g. not the DBs)
-        (runJobsLoopService "ParsoidCacheUpdateJob" "n"  $((<%= procs_per_iobound_type %> * 2)) ) &
+
+	# Legacy Parsoid jobs. TODO: Remove once this queue is drained.
+	(runJobsLoopService "ParsoidCacheUpdateJob" "n"  <%= procs_per_iobound_type %> ) &
+	# Lower priority for Parsoid dependency changes (template / file
+	# updates)
+	(runJobsLoopService "ParsoidCacheUpdateJobOnDependencyChange" "n"  <%= procs_per_iobound_type %> ) &
+	# High priority for updates to edited pages themselves
+	(runJobsLoopService "ParsoidCacheUpdateJobOnEdit" "n"  $((<%= procs_per_iobound_type %> * 2)) ) &
 fi
 
 wait
