Add MassMessage jobs to the high priority queue
Bug: 55822
Change-Id: Id3d334b916de3a8ca753262b10a00ec32ffae108

--- a/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
+++ b/modules/mediawiki/templates/jobrunner/jobs-loop.sh.erb
@@ -209,6 +209,7 @@ else
 	hpriotypes="$hpriotypes EchoNotificationJob" # echo notification
 	hpriotypes="$hpriotypes TranslateRenderJob TranslateMoveJob TranslateDeleteJob" # translate
 	hpriotypes="$hpriotypes uploadFromUrl" # upload
+	hpriotypes="$hpriotypes MassMessageJob MassMessageSubmitJob" # MassMessage
 	(runJobsLoopService "$hpriotypes" "y" <%= dprioprocs %>) &
 
 	# Start loops for highly I/O bound jobs that work on special services (e.g. not the DBs)
