Add BannerRandom filter to erbium
I'm attempting to investigate two issues in parallel:
1) How many of our requests are served uncompressed
2) Does it take longer to serve requests further down in the slot chain

This should only need to run for a couple of days to get the sample data
to look at.

Change-Id: I62e682596c07e293d7d910f6cc7be63482aa7975

--- a/templates/udp2log/filters.erbium.erb
+++ b/templates/udp2log/filters.erbium.erb
@@ -11,7 +11,7 @@ pipe 1 /usr/bin/udp-filter -F '\t' -d wikimediafoundation.org,donate.wikimedia.o
 
 ## Banner Impressions
 pipe 100 /usr/bin/udp-filter -F '\t' -p Special:RecordImpression\?banner=,Special:RecordImpression\?result= >> <%= fundraising_log_directory %>/logs/bannerImpressions-sampled100.tsv.log
-
+pipe 1000 /usr/bin/udp-filter -F '\t' -p Special:BannerRandom >> <%= fundraising_log_directory %>/logs/bannerRequests-sampled1000.tsv.log
 
 ### webstatscollector -- domas
 # NOTE!  The files that filter and collector (on gadolinium) generates
