--- a/templates/apache/sites/gerrit.wikimedia.org.erb
+++ b/templates/apache/sites/gerrit.wikimedia.org.erb
@@ -51,8 +51,8 @@ NameVirtualHost *:443
 	SSLCipherSuite AES128-GCM-SHA256:RC4-SHA:RC4-MD5:DES-CBC3-SHA:AES128-SHA:AES256-SHA
 	SSLHonorCipherOrder on
 	SSLCertificateFile /etc/ssl/certs/<%= ssl_cert %>.pem
-	SSLCertificateChainFile /etc/ssl/certs/<%= ssl_cert %>.chained.pem
 	SSLCertificateKeyFile /etc/ssl/private/<%= ssl_cert_key %>.key
+	SSLCACertificatePath /etc/ssl/certs/
 
 	RedirectMatch ^/$ https://<%= host %>/r/
 	RedirectMatch ^/gitweb/(.*)$ https://<%= host %>/r/gitweb?p=$1
