--- a/templates/mysql/send_query_digest.sh.erb
+++ b/templates/mysql/send_query_digest.sh.erb
@@ -13,6 +13,8 @@ log=/a/sqldata/${hostname}-slow.log
 runtime=8m
 table="query_review"
 
+export PERCONA_TOOLKIT_TCP_ERRORS_FILE=/dev/null
+
 digestif() {
 	/usr/bin/pt-query-digest --review h=${digest_host},D=${digest_db},t=${hostname}_${table},u=${mysql_user},p=${pw} \
 		--create-review-table \
