localssl: listen on both ipv6 and ipv4 sockets
If nginx only listens on ipv6 sockets, then it will also accept
IPv4 traffic, but will use a mapped address format. This breaks
bits geoip lookups, since they only handle ipv4 addresses.

Change-Id: I773a5ad28d4d194be92cff794c275a7d9514f939

--- a/modules/protoproxy/templates/localssl.erb
+++ b/modules/protoproxy/templates/localssl.erb
@@ -3,7 +3,8 @@
 
 # SSL proxying
 server {
-	listen [::]:443 ssl;
+	listen [::]:443 ssl ipv6only=on;
+	listen 443 ssl;
 	ssl on;
 	server_name  <%= @fqdn %>;
 
