icinga pmp-check-mysql-innodb idle_blocker_duration
Change-Id: I76304c2696b1b2d0681397ca1feb5f2c9a656e3a

--- a/templates/icinga/checkcommands.cfg.erb
+++ b/templates/icinga/checkcommands.cfg.erb
@@ -546,6 +546,11 @@ define command{
     command_line    /usr/lib/nagios/plugins/check_nrpe -H $HOSTADDRESS$ -c pmp_check_mysql_processlist
 }
 
+define command{
+    command_name    nrpe_pmp_check_mysql_innodb
+    command_line    /usr/lib/nagios/plugins/check_nrpe -H $HOSTADDRESS$ -c pmp_check_mysql_innodb
+}
+
 # end percona mysql checks
 define command{
         command_name    nrpe_check_ircecho
