--- a/templates/icinga/nrpe_percona.cfg.erb
+++ b/templates/icinga/nrpe_percona.cfg.erb
@@ -7,3 +7,7 @@ command[check_mysql_slave_running]=/usr/lib/nagios/plugins/percona/check_mysql_s
 command[check_mysql_slave_delay]=/usr/lib/nagios/plugins/percona/check_mysql_slave_delay -H localhost -l nagios -p <%= scope.lookupvar('monitor::percona::files::mysql_check_pass') %> -w 150 -c 180
 # slave check using heartbeat
 command[check_mysql_slave_heartbeat]=/usr/lib/nagios/plugins/percona/check_mysql_slave_delay -H localhost -l nagios -p <%= scope.lookupvar('monitor::percona::files::mysql_check_pass') %> -t heartbeat.heartbeat -s `/usr/local/bin/master_id.py` -w 150 -c 180
+
+command[pmp_check_mysql_processlist]=/usr/lib/nagios/plugins/percona/pmp-check-mysql-processlist -H localhost -l nagios -p <%= scope.lookupvar('monitor::percona::files::mysql_check_pass') %> -w 32 -c 64
+
+command[pmp_check_mysql_innodb]=/usr/lib/nagios/plugins/percona/pmp-check-mysql-innodb -H localhost -l nagios -p <%= scope.lookupvar('monitor::percona::files::mysql_check_pass') %> -C idle_blocker_duration -w 60 -c 600
