Pass localssl traffic to ipaddress rather than 127.0.0.1
Change-Id: I83addbc337c9b47d0f17a00a87c7d526ca24ad69

--- a/modules/protoproxy/templates/localssl.erb
+++ b/modules/protoproxy/templates/localssl.erb
@@ -16,7 +16,7 @@ server {
 	keepalive_timeout 60;
 
 	location / {
-		proxy_pass http://127.0.0.1:<%= @upstream_port %>;
+		proxy_pass http://<%= scope.lookupvar('::ipaddress') %>:<%= @upstream_port %>;
 
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
