--- a/templates/labsnfs/auto.space.erb
+++ b/templates/labsnfs/auto.space.erb
@@ -3,4 +3,5 @@
 /data	/project -fstype=nfs4,rw	<%= nfscluster %>:/<%= instanceproject %>/project \
 	/project/.snapshot -fstype=autofs,ghost file:/etc/auto.time.project
 /public	/keys	-nfsvers=3,ro,ghost labstore1.pmtpa.wmnet:/keys \
-	/datasets -nfsvers=3,ro,ghost labstore1.pmtpa.wmnet:/publicdata-project
+	/datasets -nfsvers=3,ro,ghost labstore1.pmtpa.wmnet:/publicdata-project \
+    /pagecounts -fstype=nfs4,ro <%= nfscluster %>:/pagecounts
