--- a/templates/varnish/mobile-frontend.inc.vcl.erb
+++ b/templates/varnish/mobile-frontend.inc.vcl.erb
@@ -22,24 +22,24 @@ sub vcl_recv {
 		set req.http.X-Subdomain = "M";
 	}
 
-	/* Replace <language>.(m|zero).<project>.org by <language>.<project>.org */
-	set req.http.host = regsub(req.http.host, "^([a-zA-Z0-9-]+)\.(m|zero)\.", "\1.");
-
-	/* Rewrite <language>.wap.wikipedia.org to new mobile site */
-	set req.http.host = regsub(req.http.host, "^([a-zA-Z0-9-]+)\.wap\.", "\1.mobile.");
-
 	/* Rewrite m.mediawiki.org to mediawiki.org etc */
 	if (req.http.host == "m.mediawiki.org") {
 		set req.http.host = "www.mediawiki.org";
-	}
-	if (req.http.host == "m.wikimediafoundation.org") {
+	} else if (req.http.host == "m.wikimediafoundation.org") {
 		set req.http.host = "wikimediafoundation.org";
-	}
+	} else {
 
-	/* Support the old mobile.wikipedia.org wap gateway */
-	if (req.http.host ~ "^([a-zA-Z0-9-]+)\.mobile\.([a-zA-Z0-9-]+)\.org$") {
-		set req.http.host = regsub(req.http.host, "^([a-zA-Z0-9-]+)\.mobile\.", "\1.");
-		set req.url = regsub(req.url, "\S+[\?&]go=([^&]+).*", "/wiki/\1");
+		/* Replace <language>.(m|zero).<project>.org by <language>.<project>.org */
+		set req.http.host = regsub(req.http.host, "^([a-zA-Z0-9-]+)\.(m|zero)\.", "\1.");
+
+		/* Rewrite <language>.wap.wikipedia.org to new mobile site */
+		set req.http.host = regsub(req.http.host, "^([a-zA-Z0-9-]+)\.wap\.", "\1.mobile.");
+
+		/* Support the old mobile.wikipedia.org wap gateway */
+		if (req.http.host ~ "^([a-zA-Z0-9-]+)\.mobile\.([a-zA-Z0-9-]+)\.org$") {
+			set req.http.host = regsub(req.http.host, "^([a-zA-Z0-9-]+)\.mobile\.", "\1.");
+			set req.url = regsub(req.url, "\S+[\?&]go=([^&]+).*", "/wiki/\1");
+		}
 	}
 
 	/* Allow purging */
