--- a/templates/udp2log/filters.mw.erb
+++ b/templates/udp2log/filters.mw.erb
@@ -2,4 +2,6 @@ flush pipe 1 python /usr/local/bin/demux.py<% if has_variable?("log_directory") 
 
 # Relay MediaWiki exceptions and fatals to vanadium for generating reports.
 pipe 1 egrep '^(fatal|exception)' | /usr/bin/log2udp -h <%= @template_variables['error_processor_host'] %> -p <%= @template_variables['error_processor_port'] %>
-pipe 1 egrep '^centralauth' | /usr/bin/log2udp -h <%= @template_variables['centralauth_log_processor_host'] %> -p <%= @template_variables['centralauth_log_processor_port'] %>
+
+# Forward all messages to Ganglia reporter
+pipe 1 /usr/bin/log2udp -h <%= @template_variables['ganglia_reporter_host'] %> -p <%= @template_variables['ganglia_reporter_port'] %>
