Fixed incorrect check against empty string in Varnish
after regsub, X-Stripped-XFF will have an empty string,
which is not the same as "if (X-Stripped-XFF)" which only
checks for non-existing header

Change-Id: I2be036d597c08986c7cff399be291d1c0b97a2e3

--- a/templates/varnish/zero.inc.vcl.erb
+++ b/templates/varnish/zero.inc.vcl.erb
@@ -24,7 +24,7 @@ sub tag_carrier {
 		set req.http.X-Stripped-XFF = regsub(req.http.X-Forwarded-For, ",?[^,]+$", "");
 		// ^ X-S-XFF now contains XFF without its final item, which was client.ip.
 
-		if (req.http.X-Stripped-XFF) { // If one or more IPs remain in X-S-XFF
+		if (req.http.X-Stripped-XFF != "") { // If one or more IPs remain in X-S-XFF
 			// Strip away any leading IPs, such that the result of regsub() is the
 			//  rightmost (or only) remaining IP, and use that to re-set X-CS2:
 			set req.http.X-CS2 = netmapper.map("zero", regsub(req.http.X-Stripped-XFF, "^.*, ?", ""));
