(bug 40941) Increase font size in Gerrit diff messages
Raising it by 1pt to 9pt to match the font size in commit
messages set in 07e32eedf and, to quote the submitter,
'to make it easier to the eyes of old people.'

(This is a local change, but might as well be pushed upstream
if it's a good idea.)

Bug: 40941
Change-Id: I771580d2a9252369b7b38e2a005ccf9248c1f814

--- a/files/gerrit/skin/GerritSite.css
+++ b/files/gerrit/skin/GerritSite.css
@@ -126,6 +126,14 @@ a:hover {
 }
 
 /**
+ * https://bugzilla.wikimedia.org/show_bug.cgi?id=40941
+ * Gerrit diff font isn't big enough, either
+ */
+.patchContentTable td {
+	font-size: 9pt !important;
+}
+
+/**
  * LDAP login
  */
 #gerrit_body h1 {
