Making elasticsearch ganglia plugin query $ipaddress instead of localhost for ES stats.
For some reason, elasticsearch is not responding to HTTP requests on localhost.

Change-Id: I293d269c7b81e228a5fe16c8a5866743bf0f93bb

--- a/modules/elasticsearch/templates/ganglia/elasticsearch.pyconf.erb
+++ b/modules/elasticsearch/templates/ganglia/elasticsearch.pyconf.erb
@@ -8,10 +8,10 @@ modules {
     }
 
     param host {
-        value = "http://localhost:9200/"
+        value = "http://<%= @ipaddress %>:9200/"
     }
 
-    # In order to get index specific stats specify each index seperated by
+    # In order to get index specific stats specify each index separated by
     # whitespace.
     #
     # indices can be grouped by using comma,
