--- a/modules/elasticsearch/templates/ganglia/elasticsearch_monitoring.py.erb
+++ b/modules/elasticsearch/templates/ganglia/elasticsearch_monitoring.py.erb
@@ -730,7 +730,7 @@ def metric_cleanup():
 
 #This code is for debugging and unit testing
 if __name__ == '__main__':
-    descriptors = metric_init({})
+    descriptors = metric_init({'host': 'http://<%= @ipaddress %>:9200/'})
     for d in descriptors:
         v = d['call_back'](d['name'])
         print 'value for %s is %s' % (d['name'], str(v))
