en.planet - add Wikistaycation blog
Requested by AdamBMorgan at [[m:Planet Wikimedia]] on Oct 29.

Change-Id: I0bf1145970a756d7326bf4418a378e3424f775a7

--- a/templates/planet/en_config.erb
+++ b/templates/planet/en_config.erb
@@ -561,3 +561,6 @@ name=Kothari Harsh
 
 [http://blog.pragunbhutani.in/feed.xml]
 name=Pragun Bhutani
+
+[https://wikistaycation.wordpress.com/feed/]
+name=Wikistaycation
