Further constrain W0 X-CS setting to mobile Wikipedia, for now.
* In a future state this will be updated to support more projects.
* But for now, the X-CS fallthrough should only be set if it's a mobile Wikipedia.

Change-Id: I2d912409e48d367431d5afb63f8994c2aeb2c9db

--- a/templates/varnish/zero.inc.vcl.erb
+++ b/templates/varnish/zero.inc.vcl.erb
@@ -188,7 +188,7 @@ sub tag_carrier {
 		if (req.http.host ~ "(^(ru|kk|en)\.(zero|m)|^(zero|m))\.wikipedia\.") {
 			set req.http.X-CS = "401-01";
 		}
-	} else {
+	} else if (req.http.host ~ "(^(zero|m)\.wikipedia\.")  {
 		// Any new carriers are signed up as both m & zero for all languages
 		set req.http.X-CS = req.http.X-CS2;
 	}
