--- a/templates/vcl/wikimedia.vcl.erb
+++ b/templates/vcl/wikimedia.vcl.erb
@@ -183,7 +183,8 @@ sub restrict_access {
 
 <% end -%>
 sub vcl_recv {
-	if (req.request != "GET" && req.request != "HEAD" && req.request != "POST" && req.request != "PURGE") {
+	if (req.request !~ "^(GET|HEAD|POST|PURGE)$"
+		&& !(req.request == "OPTIONS" && req.http.Origin) {
 		/* We only deal with GET, HEAD and POST by default */
 		error 403 "HTTP method not allowed.";
 	}
