--- a/modules/varnish/templates/vcl/wikimedia.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia.vcl.erb
@@ -184,7 +184,7 @@ sub restrict_access {
 <% end -%>
 sub vcl_recv {
 	if (req.request !~ "^(GET|HEAD|POST|PURGE)$"
-		&& !(req.request == "OPTIONS" && req.http.Origin) {
+		&& !(req.request == "OPTIONS" && req.http.Origin)) {
 		/* We only deal with GET, HEAD and POST by default */
 		error 403 "HTTP method not allowed.";
 	}
