zuul: configuration for gearman
The next Zuul version we are going to deploy rely on gearman to trigger
jobs. The Jenkins master being a gearman worker.

This change is loosely based on OpenStack Foundation configuration and
brings:
- gearman_server and gearman_server_start paramaters
- logging configuration for the gearman server integrated in Zuul and
  for its client side

Change-Id: Ibb146442870c0409988a0728769887dbccef9b3c

--- a/modules/zuul/templates/zuul.conf.erb
+++ b/modules/zuul/templates/zuul.conf.erb
@@ -1,3 +1,10 @@
+[gearman]
+server=<%= gearman_server %>
+
+[gearman_server]
+start=<%= gearman_server %>
+log_config=/etc/zuul/gearman-logging.conf
+
 [jenkins]
 server=<%= jenkins_server %>
 user=<%= jenkins_user %>
