Fix a erroneus check in post-merge
Erroneously checking for $::hostname and not $::fqdn in post-merge hook

Change-Id: I0bc17ad616d9f53d39a4a39281e4a5e956a0b73b

--- a/modules/puppetmaster/templates/post-merge.erb
+++ b/modules/puppetmaster/templates/post-merge.erb
@@ -13,7 +13,7 @@ if [ "$USER" = "gitpuppet" ]; then
 		<%- if worker == @fqdn then next end -%>
 	ssh -t -t <%= worker -%> 'cd /var/lib/git/operations/puppet && git pull && git submodule update --init'
 		<%- end -%>
-	<%- elsif @hostname == 'sockpuppet.pmtpa.wmnet' -%>
+	<%- elsif @fqdn == 'sockpuppet.pmtpa.wmnet' -%>
 	# TODO: After migration delete the sockpuppet references
 	ssh -t -t stafford.pmtpa.wmnet 'cd /var/lib/git/operations/puppet && git pull && git submodule update --init'
 	<%- end -%>
