--- a/templates/udp2log/filters.mw.erb
+++ b/templates/udp2log/filters.mw.erb
@@ -1,7 +1,10 @@
 flush pipe 1 python /usr/local/bin/demux.py<% if has_variable?("log_directory") then %> --basedir <%= log_directory %><% end %>
 
 # Relay MediaWiki exceptions and fatals to vanadium for generating reports.
-pipe 1 egrep '^(fatal|exception)' | /usr/bin/log2udp -h <%= @template_variables['error_processor_host'] %> -p <%= @template_variables['error_processor_port'] %>
+# The trailing space in the egrep regex expression, make sure we only catch
+# groups explicitly. We dont want to double count exceptions via exception and
+# exception-json
+pipe 1 egrep '^(fatal|exception) ' | /usr/bin/log2udp -h <%= @template_variables['error_processor_host'] %> -p <%= @template_variables['error_processor_port'] %>
 
 # Forward all messages to Ganglia reporter
 pipe 1 /usr/bin/log2udp -h <%= @template_variables['ganglia_reporter_host'] %> -p <%= @template_variables['ganglia_reporter_port'] %>
