Puppetmaster backends optimizations
If a backend server is down we should detect it really fast in our
environment (~1 sec) and it should remain down for more than 60 secs
which is the default in order not to hurt performance. 500 secs chosen
arbitrarily

Change-Id: I0bed1613d98f67ce3baa9d2e04319e105fc327d0

--- a/modules/puppetmaster/templates/puppetmaster.erb
+++ b/modules/puppetmaster/templates/puppetmaster.erb
@@ -39,7 +39,7 @@ RailsAutoDetect Off
 	ProxyPass / balancer://mycluster/
 	<Proxy balancer://mycluster>
 	  <%- @workers.each do |worker| -%>
-		  BalancerMember https://<%= worker %>:8141
+		  BalancerMember https://<%= worker %>:8141 connectiontimeout=1 retry=500
 	  <%- end -%>
 	  Order allow,deny
 	  Allow from all
