--- a/templates/misc/mw-deployment-vars.erb
+++ b/templates/misc/mw-deployment-vars.erb
@@ -5,4 +5,4 @@ MW_DBLISTS_SOURCE=<%= dblist_common_source %>
 MW_CRON_LOGS=/home/wikipedia/logs/norotate
 MW_RSYNC_HOST=<%= mw_rsync_host %>
 MW_DSH_ARGS=('-cM' '-g' 'mediawiki-installation' '-o' '-oSetupTimeout=30' '-F30')
-MW_RSYNC_ARGS=('-a' '--delete' '--exclude=**/.svn/lock' '--exclude=**/.git/objects' '--exclude=**/.git/**/objects' '--no-perms')
+MW_RSYNC_ARGS=('-a' '--delay-updates' '--compress' '--delete' '--exclude=**/.svn/lock' '--exclude=**/.git/objects' '--exclude=**/.git/**/objects' '--no-perms')
