--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -4,9 +4,12 @@ include "errorpage.inc.vcl";
 include "text-common.inc.vcl";
 
 # A random director with the same backends as the default 'backend' (chash) director
-director <%= @default_backend %>_random random {
 <%
-	@varnish_directors[@default_backend].each do |backend|
+default_backend = @vcl_config.fetch("default_backend", "backend")
+-%>
+director <%= default_backend %>_random random {
+<%
+	@varnish_directors[default_backend].each do |backend|
 		name = /^[0-9\.]+$/.match(backend) ? "ipv4_" + backend.gsub(".", "_") : backend.split(".")[0].gsub("-", "_")
 -%>
 	{
