--- a/templates/varnish/text-frontend.inc.vcl.erb
+++ b/templates/varnish/text-frontend.inc.vcl.erb
@@ -9,6 +9,7 @@ default_backend = @vcl_config.fetch("default_backend", "backend")
 -%>
 director <%= default_backend %>_random random {
 <%
+	.retries = 5;
 	@varnish_directors[default_backend].each do |backend|
 		name = /^[0-9\.]+$/.match(backend) ? "ipv4_" + backend.gsub(".", "_") : backend.split(".")[0].gsub("-", "_")
 -%>
@@ -54,11 +55,9 @@ sub vcl_recv {
 	call mobile_redirect;
 	call pass_requests;
 
-/*
 	if (req.url == "/wiki/Special:CentralAutoLogin/start?type=script") {
 		set req.backend = backend_random;
 	}
-*/
 
 	/* Users that just logged out, should not get a 304 for their
 	 * (locally cached) logged in pages. */
